# faust-toy-surge-osc

./: CMakeLists.txt  README.md
architecture/: toy-surge-arch.cpp
faust-code/: basicOsc.dsp  justASin.dsp
src/: main.cpp
